--- a/.env
+++ b/.env
@@ -1,5 +1,15 @@
-POSTGRES_USER=letterpress
-POSTGRES_PASSWORD=letterpress_secrets
-POSTGRES_HOST=postgres
+POSTGRES_USER=tablelink
+POSTGRES_PASSWORD=tablelink_secrets
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_DB=letterpress_db
+POSTGRES_DB=golang
+
+
+apps_debug=true
+apps_host="0.0.0.0"
+apps_httpport=8080
+apps_appName="test-grpc"
+apps_version="v1"
+apps_secretJwt="this-is-secret-jwt"
+apps_timeout=500
+apps_swagger_address="0.0.0.0:8081"
